# no-op-circuit-paper

./: .env.example  .gitignore  README.md  pyproject.toml
data/: _generation_log.jsonl  _generation_snapshot_probe.json  archetypes.yaml
hf_dataset/: README.md
modal_app/: ablate_random_features.py  ablate_sae_features.py  action_order_control.py  agent_loop.py  analyze.py  cache_activations.py  cache_corpus.py  cache_dataset.py  cache_task_corpus.py  characterise_sae_features.py  common.py  compute_firing_features.py  contradictory_crossmodel.py  multiturn_experiment.py  noisy_monitor.py  patch_dataset.py  patching.py  smoke.py  smoke_model.py  steer_dataset.py  steering.py  swe_peak_patching.py  train_sae.py
paper/: .draft_neurips.md  .draft_neurips_abstract.md  .draft_neurips_body.md  .draft_neurips_title.txt  .gitignore  .neurips_header_resolved.tex  article_header.tex  arxiv_abstract.txt  arxiv_checklist.md  arxiv_metadata_abstract.txt  build.sh  draft.bbl  draft.md  draft.tex  refs.bib
results/: AGENTLOOP_pilot.md  KEYSTONE_prior_gating.md  SCALING_F1.md  SCALING_F3.md  codegemma_replication.md  paper_stats.json  paper_stats.md  patch_grid_permutation.json  v_noop_codegemma_all49.pt
scripts/: ablation_stats.py  action_distribution_check.py  adversarial_v_noop_baselines.py  agent_loop_monitor_simulation.py  agent_loop_per_repo_and_casestudy.py  analyze_action_order_control.py  analyze_agent_loop.py  analyze_contradictory_crossmodel.py  analyze_five_action_decomp.py  analyze_multiturn.py  analyze_noisy_monitor.py  analyze_patching.py  analyze_steering.py  (+51 more)
(+3155 files in other folders)
