[project]
name = "no-op-circuit"
version = "0.0.1"
description = "Mechanistic detection of edit-vs-abstain decisions in coding agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  # Local orchestration only. Heavy GPU deps live in the Modal Image.
  "modal>=0.65",
  "python-dotenv>=1.0",
  "openai>=1.50",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "rich>=13.7",
  "typer>=0.12",
  "pytest>=8.0",  # used by the task validator to execute generated tasks
]

[project.optional-dependencies]
# Optional local install for running analysis notebooks off-Modal.
analysis = [
  "torch>=2.4",
  "transformers>=4.46",
  "accelerate>=1.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
